After a11y audit, fixed color contrast issues on page

--- a/lesson6-styling/03-contrast-audit/blog.css
+++ b/lesson6-styling/03-contrast-audit/blog.css
@@ -36,7 +36,8 @@ h6, .h6 {
  */
 
 .blog-masthead {
-  background-color: #428bca;
+  /* background-color: #428bca; */
+  background-color: black;
   -webkit-box-shadow: inset 0 -2px 5px rgba(0,0,0,.1);
           box-shadow: inset 0 -2px 5px rgba(0,0,0,.1);
 }
@@ -48,6 +49,7 @@ h6, .h6 {
   padding: 10px;
   font-weight: 500;
   color: #cdddeb;
+  
 }
 .blog-nav-item:hover,
 .blog-nav-item:focus {
@@ -58,6 +60,7 @@ h6, .h6 {
 /* Active state gets a caret at the bottom */
 .blog-nav .active {
   color: #fff;
+  /* color: black; */
 }
 .blog-nav .active:after {
   position: absolute;
@@ -90,7 +93,8 @@ h6, .h6 {
 }
 .blog-description {
   font-size: 20px;
-  color: #999;
+  /* color: #999; */
+  color: black;
 }
 
 
@@ -146,7 +150,8 @@ h6, .h6 {
 }
 .blog-post-meta {
   margin-bottom: 20px;
-  color: #999;
+  /* color: #999; */
+  color: black;
 }
 
 
